--- a/app/src/main/res/layout/newslayout.xml
+++ b/app/src/main/res/layout/newslayout.xml
@@ -17,7 +17,7 @@
         android:id="@+id/loadbutton"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
-        android:text="Load"
+        android:text="@string/loadbutton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
