--- a/app/src/main/res/layout/activity_charging_station_finder.xml
+++ b/app/src/main/res/layout/activity_charging_station_finder.xml
@@ -23,7 +23,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/findbar"
+                android:id="@+id/favoritesbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/bevan"
@@ -89,7 +89,7 @@
                 android:textStyle="bold" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/myrecyclerview"
+                android:id="@+id/favrecyclerview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="20dp" />
