--- a/app/src/main/res/layout/details_layout.xml
+++ b/app/src/main/res/layout/details_layout.xml
@@ -57,7 +57,7 @@
         android:layout_marginStart="112dp"
         android:layout_marginEnd="112dp"
         android:layout_marginBottom="120dp"
-        android:text="Add to Favourites"
+        android:text="@string/addFavourites"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,7 +71,7 @@
         android:layout_marginStart="112dp"
         android:layout_marginEnd="112dp"
         android:layout_marginBottom="120dp"
-        android:text="Delete from Favourites"
+        android:text="@string/deleteFavourites"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,7 +85,7 @@
         android:layout_marginStart="112dp"
         android:layout_marginEnd="112dp"
         android:layout_marginBottom="52dp"
-        android:text="Close"
+        android:text="@string/closeButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -96,7 +96,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
         android:layout_marginEnd="121dp"
-        android:text="View in Browser"
+        android:text="@string/viewBrowser"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/newsUrl" />
