Updated Charging Station finder

--- a/app/src/main/res/layout/recycler_layout.xml
+++ b/app/src/main/res/layout/recycler_layout.xml
@@ -62,4 +62,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/favadd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Favorites"
+        tools:layout_editor_absoluteX="280dp"
+        tools:layout_editor_absoluteY="75dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
