--- a/app/src/main/res/layout/activity_charging_station_finder.xml
+++ b/app/src/main/res/layout/activity_charging_station_finder.xml
@@ -49,14 +49,11 @@
 
             <EditText
                 android:id="@+id/latitude"
-                android:layout_width="107dp"
+                android:layout_width="158dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:textColor="@color/purple_500"
-                android:textColorHighlight="@color/purple_500"
-                android:textColorHint="@color/purple_500"
-                android:textColorLink="@color/purple_500"
-                android:textCursorDrawable="@color/purple_500" />
+                android:layout_marginLeft="50px"
+                android:ems="10"
+                android:inputType="textPersonName" />
 
             <TextView
                 android:id="@+id/longname"
@@ -71,14 +68,11 @@
 
             <EditText
                 android:id="@+id/longitude"
-                android:layout_width="104dp"
+                android:layout_width="158dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:textColor="@color/purple_500"
-                android:textColorHighlight="@color/purple_500"
-                android:textColorHint="@color/purple_500"
-                android:textColorLink="@color/purple_500"
-                android:textCursorDrawable="@color/purple_500" />
+                android:layout_marginLeft="50px"
+                android:ems="10"
+                android:inputType="textPersonName" />
 
             <Button
                 android:id="@+id/searchbtn"
@@ -88,11 +82,20 @@
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
+            <ProgressBar
+                android:id="@+id/progressBar1"
+                style="?android:attr/progressBarStyleLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/favrecyclerview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="20dp" />
+                android:padding="4dp"
+                android:background="@android:color/darker_gray"
+                />
 
         </LinearLayout>
 
