--- a/app/src/main/res/layout/finder_fragment.xml
+++ b/app/src/main/res/layout/finder_fragment.xml
@@ -49,14 +49,24 @@
         android:textStyle="bold" />
 
     <Button
+        android:id="@+id/favadded"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Add to Favorites" />
+
+    <Button
         android:id="@+id/directioninfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="onClick"
         android:text="Get Direction" />
 
-    <com.google.android.gms.maps.MapView
-        android:id="@+id/mapView"
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="465dp" />
+        android:layout_height="match_parent"
+        android:id="@+id/map"
+        tools:context=".MapsActivity"
+        android:name="com.google.android.gms.maps.SupportMapFragment" />
 
 </LinearLayout>
