--- a/app/src/main/res/layout/busrouteinfo.xml
+++ b/app/src/main/res/layout/busrouteinfo.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/busNumberView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:text="Bus Number"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/stopNumberView"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
         android:id="@+id/stopNumberView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
